# Pygmalion

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
.claude/skills/frontend-design/: SKILL.md
.claude/skills/logo-design/: SKILL.md
.claude/skills/print-design/: SKILL.md
pygmalion/: __init__.py  agent.py  config.py  main.py
pygmalion/prompts/: __init__.py
pygmalion/tools/: __init__.py  gemini.py  gimp.py  imagemagick.py  inkscape.py  potrace.py  weasyprint.py
pygmalion/utils/: __init__.py  logging.py  progress.py
